chỉnh sửa về cùng một phiên bản là java, sdk, jdk trong maven về bản 21 để tránh bị cảnh báo